--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
   ],
   "examples": [
     {
-      "name": "Boş Örnek",
+      "name": "Başlangıç Örneği",
       "url": "https://raw.githubusercontent.com/pxsty0/agent.deneyapkart/main/examples/blank.ino"
     },
     {
